llullParser.py
# Generated from llull.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class llullParser ( Parser ):

    grammarFileName = "llull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'if'", "'else'", "'while'", "'for'", 
                     "';'", "'read'", "'write'", "'array'", "'get'", "'set'", 
                     "'='", "<INVALID>", "<INVALID>", "'void'", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
                     "'<='", "'>'", "'>='", "'<>'", "'=='", "'^'", "'('", 
                     "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ML_COMMENT", "COMMENT", "TYPE", "NUM", 
                      "LETTER", "MES", "MENYS", "MULT", "DIV", "MOD", "LT", 
                      "LE", "GT", "GE", "DIFF", "EQ", "POW", "LPAR", "RPAR", 
                      "LBRACKET", "RBRACKET", "STRING", "WS" ]

    RULE_root = 0
    RULE_func = 1
    RULE_expr = 2
    RULE_stmt = 3
    RULE_read = 4
    RULE_write = 5
    RULE_array = 6
    RULE_getArr = 7
    RULE_setArr = 8
    RULE_assig = 9
    RULE_method = 10
    RULE_ident = 11

    ruleNames =  [ "root", "func", "expr", "stmt", "read", "write", "array", 
                   "getArr", "setArr", "assig", "method", "ident" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    ML_COMMENT=13
    COMMENT=14
    TYPE=15
    NUM=16
    LETTER=17
    MES=18
    MENYS=19
    MULT=20
    DIV=21
    MOD=22
    LT=23
    LE=24
    GT=25
    GE=26
    DIFF=27
    EQ=28
    POW=29
    LPAR=30
    RPAR=31
    LBRACKET=32
    RBRACKET=33
    STRING=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(llullParser.EOF, 0)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.FuncContext)
            else:
                return self.getTypedRuleContext(llullParser.FuncContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = llullParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.TYPE:
                self.state = 24
                self.func()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(llullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(llullParser.TYPE, 0)

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.IdentContext)
            else:
                return self.getTypedRuleContext(llullParser.IdentContext,i)


        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def LBRACKET(self):
            return self.getToken(llullParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(llullParser.RBRACKET, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StmtContext)
            else:
                return self.getTypedRuleContext(llullParser.StmtContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = llullParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(llullParser.TYPE)
            self.state = 33
            self.ident()
            self.state = 34
            self.match(llullParser.LPAR)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.LETTER:
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 35
                        self.ident()
                        self.state = 36
                        self.match(llullParser.T__0) 
                    self.state = 42
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 43
                self.ident()


            self.state = 46
            self.match(llullParser.RPAR)
            self.state = 47
            self.match(llullParser.LBRACKET)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.T__10) | (1 << llullParser.LETTER))) != 0):
                self.state = 48
                self.stmt()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(llullParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def NUM(self):
            return self.getToken(llullParser.NUM, 0)

        def ident(self):
            return self.getTypedRuleContext(llullParser.IdentContext,0)


        def getArr(self):
            return self.getTypedRuleContext(llullParser.GetArrContext,0)


        def POW(self):
            return self.getToken(llullParser.POW, 0)

        def MULT(self):
            return self.getToken(llullParser.MULT, 0)

        def DIV(self):
            return self.getToken(llullParser.DIV, 0)

        def MES(self):
            return self.getToken(llullParser.MES, 0)

        def MENYS(self):
            return self.getToken(llullParser.MENYS, 0)

        def MOD(self):
            return self.getToken(llullParser.MOD, 0)

        def LT(self):
            return self.getToken(llullParser.LT, 0)

        def LE(self):
            return self.getToken(llullParser.LE, 0)

        def GT(self):
            return self.getToken(llullParser.GT, 0)

        def GE(self):
            return self.getToken(llullParser.GE, 0)

        def DIFF(self):
            return self.getToken(llullParser.DIFF, 0)

        def EQ(self):
            return self.getToken(llullParser.EQ, 0)

        def getRuleIndex(self):
            return llullParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = llullParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [llullParser.LPAR]:
                self.state = 57
                self.match(llullParser.LPAR)
                self.state = 58
                self.expr(0)
                self.state = 59
                self.match(llullParser.RPAR)
                pass
            elif token in [llullParser.NUM]:
                self.state = 61
                self.match(llullParser.NUM)
                pass
            elif token in [llullParser.LETTER]:
                self.state = 62
                self.ident()
                pass
            elif token in [llullParser.T__9]:
                self.state = 63
                self.getArr()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 102
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 66
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 67
                        self.match(llullParser.POW)
                        self.state = 68
                        self.expr(15)
                        pass

                    elif la_ == 2:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 70
                        self.match(llullParser.MULT)
                        self.state = 71
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 72
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 73
                        self.match(llullParser.DIV)
                        self.state = 74
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 75
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 76
                        self.match(llullParser.MES)
                        self.state = 77
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 79
                        self.match(llullParser.MENYS)
                        self.state = 80
                        self.expr(12)
                        pass

                    elif la_ == 6:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 81
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 82
                        self.match(llullParser.MOD)
                        self.state = 83
                        self.expr(11)
                        pass

                    elif la_ == 7:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 85
                        self.match(llullParser.LT)
                        self.state = 86
                        self.expr(10)
                        pass

                    elif la_ == 8:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 87
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 88
                        self.match(llullParser.LE)
                        self.state = 89
                        self.expr(9)
                        pass

                    elif la_ == 9:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 90
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 91
                        self.match(llullParser.GT)
                        self.state = 92
                        self.expr(8)
                        pass

                    elif la_ == 10:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 93
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 94
                        self.match(llullParser.GE)
                        self.state = 95
                        self.expr(7)
                        pass

                    elif la_ == 11:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 97
                        self.match(llullParser.DIFF)
                        self.state = 98
                        self.expr(6)
                        pass

                    elif la_ == 12:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 99
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 100
                        self.match(llullParser.EQ)
                        self.state = 101
                        self.expr(5)
                        pass

             
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.LBRACKET)
            else:
                return self.getToken(llullParser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.RBRACKET)
            else:
                return self.getToken(llullParser.RBRACKET, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StmtContext)
            else:
                return self.getTypedRuleContext(llullParser.StmtContext,i)


        def assig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssigContext)
            else:
                return self.getTypedRuleContext(llullParser.AssigContext,i)


        def read(self):
            return self.getTypedRuleContext(llullParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(llullParser.WriteContext,0)


        def method(self):
            return self.getTypedRuleContext(llullParser.MethodContext,0)


        def array(self):
            return self.getTypedRuleContext(llullParser.ArrayContext,0)


        def getArr(self):
            return self.getTypedRuleContext(llullParser.GetArrContext,0)


        def setArr(self):
            return self.getTypedRuleContext(llullParser.SetArrContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = llullParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(llullParser.T__1)
                self.state = 108
                self.match(llullParser.LPAR)
                self.state = 109
                self.expr(0)
                self.state = 110
                self.match(llullParser.RPAR)
                self.state = 111
                self.match(llullParser.LBRACKET)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.T__10) | (1 << llullParser.LETTER))) != 0):
                    self.state = 112
                    self.stmt()
                    self.state = 117
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 118
                self.match(llullParser.RBRACKET)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==llullParser.T__2:
                    self.state = 119
                    self.match(llullParser.T__2)
                    self.state = 120
                    self.match(llullParser.LBRACKET)
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.T__10) | (1 << llullParser.LETTER))) != 0):
                        self.state = 121
                        self.stmt()
                        self.state = 126
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 127
                    self.match(llullParser.RBRACKET)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(llullParser.T__3)
                self.state = 131
                self.match(llullParser.LPAR)
                self.state = 132
                self.expr(0)
                self.state = 133
                self.match(llullParser.RPAR)
                self.state = 134
                self.match(llullParser.LBRACKET)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.T__10) | (1 << llullParser.LETTER))) != 0):
                    self.state = 135
                    self.stmt()
                    self.state = 140
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 141
                self.match(llullParser.RBRACKET)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(llullParser.T__4)
                self.state = 144
                self.match(llullParser.LPAR)
                self.state = 145
                self.assig()
                self.state = 146
                self.match(llullParser.T__5)
                self.state = 147
                self.expr(0)
                self.state = 148
                self.match(llullParser.T__5)
                self.state = 149
                self.assig()
                self.state = 150
                self.match(llullParser.RPAR)
                self.state = 151
                self.match(llullParser.LBRACKET)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.T__10) | (1 << llullParser.LETTER))) != 0):
                    self.state = 152
                    self.stmt()
                    self.state = 157
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 158
                self.match(llullParser.RBRACKET)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 160
                self.read()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 161
                self.write()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 162
                self.assig()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 163
                self.method()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 164
                self.array()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 165
                self.getArr()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 166
                self.setArr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def ident(self):
            return self.getTypedRuleContext(llullParser.IdentContext,0)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_read

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = llullParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(llullParser.T__6)
            self.state = 170
            self.match(llullParser.LPAR)
            self.state = 171
            self.ident()
            self.state = 172
            self.match(llullParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WriteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.IdentContext)
            else:
                return self.getTypedRuleContext(llullParser.IdentContext,i)


        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.STRING)
            else:
                return self.getToken(llullParser.STRING, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def getArr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.GetArrContext)
            else:
                return self.getTypedRuleContext(llullParser.GetArrContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_write

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = llullParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_write)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(llullParser.T__7)
            self.state = 175
            self.match(llullParser.LPAR)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__9) | (1 << llullParser.NUM) | (1 << llullParser.LETTER) | (1 << llullParser.LPAR) | (1 << llullParser.STRING))) != 0):
                self.state = 180
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                if la_ == 1:
                    self.state = 176
                    self.ident()
                    pass

                elif la_ == 2:
                    self.state = 177
                    self.match(llullParser.STRING)
                    pass

                elif la_ == 3:
                    self.state = 178
                    self.expr(0)
                    pass

                elif la_ == 4:
                    self.state = 179
                    self.getArr()
                    pass


                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==llullParser.T__0:
                    self.state = 182
                    self.match(llullParser.T__0)
                    self.state = 187
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        self.state = 183
                        self.ident()
                        pass

                    elif la_ == 2:
                        self.state = 184
                        self.match(llullParser.STRING)
                        pass

                    elif la_ == 3:
                        self.state = 185
                        self.expr(0)
                        pass

                    elif la_ == 4:
                        self.state = 186
                        self.getArr()
                        pass


                    self.state = 193
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 196
            self.match(llullParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def ident(self):
            return self.getTypedRuleContext(llullParser.IdentContext,0)


        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = llullParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(llullParser.T__8)
            self.state = 199
            self.match(llullParser.LPAR)
            self.state = 200
            self.ident()
            self.state = 201
            self.match(llullParser.T__0)
            self.state = 202
            self.expr(0)
            self.state = 203
            self.match(llullParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetArrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def ident(self):
            return self.getTypedRuleContext(llullParser.IdentContext,0)


        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_getArr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetArr" ):
                return visitor.visitGetArr(self)
            else:
                return visitor.visitChildren(self)




    def getArr(self):

        localctx = llullParser.GetArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_getArr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 205
            self.match(llullParser.T__9)
            self.state = 206
            self.match(llullParser.LPAR)
            self.state = 207
            self.ident()
            self.state = 208
            self.match(llullParser.T__0)
            self.state = 209
            self.expr(0)
            self.state = 210
            self.match(llullParser.RPAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetArrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(llullParser.LPAR, 0)

        def ident(self):
            return self.getTypedRuleContext(llullParser.IdentContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def RPAR(self):
            return self.getToken(llullParser.RPAR, 0)
